Change meta-features for meta-caracteristicas

--- a/MainMatter/Introduction.tex
+++ b/MainMatter/Introduction.tex
@@ -48,7 +48,7 @@ El resto de la tesis está organizada de la siguiente manera:
 
 \begin{itemize}
 	\item El capítulo \ref{chapter:review} (Estado del Arte) introduce los problemas de meta-learning y AutoML y las técnicas que a menudo son aplicadas para lidiar con estos problemas. Esto es seguido por un resumen de los trabajos relacionados de meta-learning para la selección de algoritmos y de distintas herramientas de AutoML.
-	\item El capítulo \ref{chapter:proposal} (Propuesta) describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de los meta-features usados y los meta-modelos desarrollados.
+	\item El capítulo \ref{chapter:proposal} (Propuesta) describe la estrategia de meta-learning propuesta para AutoML, incluyendo un análisis de las meta-características usados y los meta-modelos desarrollados.
 	\item El capítulo \ref{chapter:results} (Experimentación y resultados) describe brevemente los aspectos de la metodología experimental adoptada, investiga los resultados obtenidos y se realiza una discusión de los mismos.
 	\item Finalmente, en ~\ref{conclusion} (conclusiones) se presentan las conclusiones de esta tesis, y se discuten las limitaciones y consideraciones finales. Por último, se realizan sugerencias para estudios futuros.
 \end{itemize}
