--- a/MainMatter/Proposal.tex
+++ b/MainMatter/Proposal.tex
@@ -13,7 +13,7 @@ La herramienta de meta-learning creada es capaz de abordar una gran variedad de 
 El enfoque desarrollado se propone como un paso preliminar para otras soluciones más costosas computacionalmente, como por ejemplo, para la inicialización de sistemas de AutoML. En esta investigación AutoGOAL también es usado como herramienta complementaria en el proceso de búsqueda de flujos. Por lo tanto, se describe como se realiza la adición de conocimiento experto a la estrategia de búsqueda utilizada por AutoGOAL: \textit{Probabilistic Grammatical Evolution}~\cite{pge2015}, que no había sido usada anteriormente con meta-learning.
 
 
-Este capítulo proporciona una descripción al método de meta-learning propuesto para la selección de flujos (Sección~\ref{sec:proposal}) y un ejemplo de su incorporación a un sistema de AutoML (Sección~\ref{sec:autogoal_imp}). La propuesta es descrita explicando cómo ocurre la adquisición de meta-conocimiento (Sección \ref{sub:adquisicion}), que permite la creación de una base de conocimiento, mostrando las meta-features usadas y cómo los flujos de algoritmos fueron generados y guardados. Luego, se describe cómo se aplica el meta-conocimiento (Sección \ref{sub:aplicacion}), mediante la implementación de dos estrategias que tienen el objetivo de recomendar una lista de flujos de algoritmos prometedores para un dataset determinado. Por último, se explica cómo esta lista de flujos resultantes generada por el método propuesto es añadida al proceso de búsqueda de AutoGOAL (Sección~\ref{sec:autogoal_imp}).
+Este capítulo proporciona una descripción al método de meta-learning propuesto para la selección de flujos (Sección~\ref{sec:proposal}) y un ejemplo de su incorporación a un sistema de AutoML (Sección~\ref{sec:autogoal_imp}). La propuesta es descrita explicando cómo ocurre la adquisición de meta-conocimiento (Sección \ref{sub:adquisicion}), que permite la creación de una base de conocimiento, mostrando las meta-características usadas y cómo los flujos de algoritmos fueron generados y guardados. Luego, se describe cómo se aplica el meta-conocimiento (Sección \ref{sub:aplicacion}), mediante la implementación de dos estrategias que tienen el objetivo de recomendar una lista de flujos de algoritmos prometedores para un dataset determinado. Por último, se explica cómo esta lista de flujos resultantes generada por el método propuesto es añadida al proceso de búsqueda de AutoGOAL (Sección~\ref{sec:autogoal_imp}).
 
 \section{Método propuesto}\label{sec:proposal}
 
@@ -38,15 +38,15 @@ La implementación de cada uno de estas fases es descrita en las siguientes secc
 %- Explicar la información que se extrajo sobre los pipelines: para cada dataset se extrajeron los mejores pipelines, explicar el formato en que fueron guardados (mediante el sampler de AutoGOAL), y el rendimiento que se obtuvo para cada uno de ellos.
 %- Concluir mencionando que las meta-features y la estructura de los pipelines son usadas como características para el meta-modelo, y el rendimiento de los pipelines como etiquetas.
 
-La adquisición de meta-conocimiento se realiza mediante la extracción de caracterizaciones de un conjunto de datasets, es decir, meta-features, y de información referente a un conjuntos de algoritmos que deben ser probados en estos datasets. Entre la información de los algoritmos extraídos se guarda información respecto a los hiperparámetros usados y al rendimiento alcanzado en cada una de las tareas para cada uno de los conjuntos de algoritmos usados.
+La adquisición de meta-conocimiento se realiza mediante la extracción de caracterizaciones de un conjunto de datasets, es decir, meta-características, y de información referente a un conjuntos de algoritmos que deben ser probados en estos datasets. Entre la información de los algoritmos extraídos se guarda información respecto a los hiperparámetros usados y al rendimiento alcanzado en cada una de las tareas para cada uno de los conjuntos de algoritmos usados.
 
 \subsubsection{Características de los datasets}\label{subsub:metafeat}
 
-Para extraer meta-features de una tarea de aprendizaje específica es necesario realizar un análisis de la información contenida en el dataset asociado a ella. Las meta-features, además de proveer información referente a los datos del dataset (relacionados a valores medios, desviación estándar, etc), deben ser capaces de proporcionar conocimiento sobre la tarea que el dataset está representando.  Por lo tanto, las meta-features pueden ser concebidas como colecciones específicas de características de un dataset, las cuales proporcionan información relevante sobre la tarea que es necesario resolver mediante algoritmos de aprendizaje. La principal suposición es que el conocimiento codificado en las meta-features deben mostrar algún tipo de pista general (por ejemplo, relacionado a la complejidad de la tarea) que permita la solución de la tarea, en vez de limitarse a la información relacionada con el contenido del dataset (como la composición de sus datos). Con estas meta-features y una cantidad suficientemente grande de datasets es posible la creación de un meta-modelo que sea capaz de resolver una gran cantidad de tareas.
+Para extraer meta-características de una tarea de aprendizaje específica es necesario realizar un análisis de la información contenida en el dataset asociado a ella. Las meta-características, además de proveer información referente a los datos del dataset (relacionados a valores medios, desviación estándar, etc), deben ser capaces de proporcionar conocimiento sobre la tarea que el dataset está representando.  Por lo tanto, las meta-características pueden ser concebidas como colecciones específicas de características de un dataset, las cuales proporcionan información relevante sobre la tarea que es necesario resolver mediante algoritmos de aprendizaje. La principal suposición es que el conocimiento codificado en las meta-características deben mostrar algún tipo de pista general (por ejemplo, relacionado a la complejidad de la tarea) que permita la solución de la tarea, en vez de limitarse a la información relacionada con el contenido del dataset (como la composición de sus datos). Con estas meta-características y una cantidad suficientemente grande de datasets es posible la creación de un meta-modelo que sea capaz de resolver una gran cantidad de tareas.
 
 % Las meta-features extraídos de cada dataset deben ser suficientes para describir los aspectos principales del mismo, de tal manera que cada dataset pueda ser identificado mediante esta caracterización. Además, deben comprender las características necesarias para distinguir el rendimiento obtenido de diferentes algoritmos de aprendizaje cuando son aplicados. 
 
-Como se mencionó anteriormente en el Capítulo \ref{chapter:review}, las meta-features se pueden separar en 5 categorías \cite{bradzil2009metalearning}:
+Como se mencionó anteriormente en el Capítulo \ref{chapter:review}, las meta-características se pueden separar en 5 categorías \cite{bradzil2009metalearning}:
 
 \begin{itemize}
 	\item \textit{Simples o generales:} Incluyen información general relacionada a un dataset determinado y, en cierta medida, están concebidas para medir la complejidad del problema subyacente.
@@ -56,7 +56,7 @@ Como se mencionó anteriormente en el Capítulo \ref{chapter:review}, las meta-f
 	\item \textit{Landmarking:} Usan el rendimiento de algoritmos de aprendizaje simples y rápidos para caracterizar los datasets.
 \end{itemize}
 
-Debido a la complejidad computacional requerida para el cálculo de los últimos dos tipos de meta-features, estos no fueron implementados. Sin embargo, se añadieron meta-features específicos de AutoGOAL, aprovechando la caracterización de los tipos semánticos de entrada y de salida que este sistema ofrece. Para evaluar el enfoque seguido se implementaron las siguientes meta-features, tomadas varios trabajos del estado del arte \cite{castiello2005metadata, fuerer2015efficient}
+Debido a la complejidad computacional requerida para el cálculo de los últimos dos tipos de meta-características, estos no fueron implementados. Sin embargo, se añadieron meta-características específicos de AutoGOAL, aprovechando la caracterización de los tipos semánticos de entrada y de salida que este sistema ofrece. Para evaluar el enfoque seguido se implementaron las siguientes meta-características, tomadas varios trabajos del estado del arte \cite{castiello2005metadata, fuerer2015efficient}
 
 \begin{itemize}
 	\item \underline{\textsc{Simples}}: \begin{description}
@@ -85,9 +85,9 @@ Debido a la complejidad computacional requerida para el cálculo de los últimos
 		\item[Entropía normalizada de una clase:]  el valor de entropía $H(C)$ de una variable $C$ indica cuanta información es necesaria para especificar una clase (etiqueta). El valor de entropía $H(C)$ es evaluado usando la siguiente fórmula: $H(C) = \sum^n_{i=1}p_i log_2(p_i)$, donde $p_i$ es la probabilidad (frecuencia relativa) de ocurrencia de una clase $i$. Cuando suponemos que cada clase en un dataset tiene la misma probabilidad de aparecer, entonces el valor máximo teórico para la entropía de una clase es $log_2(n)$, por lo tanto la entropía normalizada es calculada como: $H(C)_{norm} = \dfrac{H(C)}{log_2(n)}$
 		\item[Entropía normalizada de un atributo:] el valor de entropía H(X) de un atributo X mide la información relacionada a los valores que X puede tener. La entropía normalizada de un atributo se calcula con la misma fórmula anterior: $H(X)_{norm} = \dfrac{H(X)}{log_2(n)}$. Para retornar un valor representado la entropía de todo el dataset se calcula la entropía de cada uno de sus atributos, y de estos valores es devuelto la media, el mínimo, el máximo y la desviación estándar.
 		\item[Entropía conjunta:] mide la entropía total del sistema combinado de variables, es decir, de un par de variables (C, X), los cuales están representados por una variable de clase y uno de los M atributos de entrada discretizados respectivamente. Si $p_{ij}$ representa la probabilidad conjunta de observar el i-ésimo valor del atributo X y el j-ésimo valor de clase, la entropía conjunta está definida como: $H(C, X) = \sum_{i \in X, j \in C} p_{ij} log_2(p_{ij})$. Después de calcular la entropía para cada par clase-atributo, de estos valores se devuelve la media, el mínimo, el máximo y la desviación estándar.
-		\item[Información mutua de clase y atributo:] mide la información común compartida entre dos variables aleatorias C y X. Si C y X representan una variable de clase y un atributo de entrada respectivamente, entonces esta meta-feature mide la información contenida por el atributo X sobre una variable de clase y describe la reducción de incertidumbre para C debido al conocimiento de X. La información mutua de clase y atributo es evaluada usando la fórmula: $MI(C, X) = H(C) + H(X) - H(C, X)$. Como medida para describir todo el dataset, se calcula la entropía para cada par clase-atributo, de estos valores se devuelve la media, el mínimo, el máximo y la desviación estándar.
-		\item[Número equivalente de atributos:] en lo referente a las tareas de clasificación, la información requerida para especificar una clase es $H(C)$ y ningún sistema de clasificación puede ser completamente existoso a no ser que se proporcione  $H(C)$ pedazos de información. Esta meta-feature proporciona información sobre la complejidad de un problema, específicamente el número de atributos de un dataset determinado que es adecuado para resolver la tarea de clasificación. Es evaluada mediante la proporción entre la entropía de clase $H(C)$ y el promedio de la información mutua $\overline{MI(C, X)}$ como: $EN_{attr} = \dfrac{H(C)}{\overline{MI(C, X}}$
-		\item[Relación de la señal de ruido:]  mide la cantidad de información irrelevante contenida en un dataset. Si se considera $\overline{MI(C, X)}$ como una medida de información útil de una clase y $\overline{H(X)} - \overline{MI(C, X)}$ como una medida de información no útil, el meta-feature puede ser evaluado como: $NS.ratio = \dfrac{\overline{H(X)} - \overline{MI(C, X}}{\overline{MI(C, X)}}$
+		\item[Información mutua de clase y atributo:] mide la información común compartida entre dos variables aleatorias C y X. Si C y X representan una variable de clase y un atributo de entrada respectivamente, entonces esta meta-característica mide la información contenida por el atributo X sobre una variable de clase y describe la reducción de incertidumbre para C debido al conocimiento de X. La información mutua de clase y atributo es evaluada usando la fórmula: $MI(C, X) = H(C) + H(X) - H(C, X)$. Como medida para describir todo el dataset, se calcula la entropía para cada par clase-atributo, de estos valores se devuelve la media, el mínimo, el máximo y la desviación estándar.
+		\item[Número equivalente de atributos:] en lo referente a las tareas de clasificación, la información requerida para especificar una clase es $H(C)$ y ningún sistema de clasificación puede ser completamente existoso a no ser que se proporcione  $H(C)$ pedazos de información. Esta meta-característica proporciona información sobre la complejidad de un problema, específicamente el número de atributos de un dataset determinado que es adecuado para resolver la tarea de clasificación. Es evaluada mediante la proporción entre la entropía de clase $H(C)$ y el promedio de la información mutua $\overline{MI(C, X)}$ como: $EN_{attr} = \dfrac{H(C)}{\overline{MI(C, X}}$
+		\item[Relación de la señal de ruido:]  mide la cantidad de información irrelevante contenida en un dataset. Si se considera $\overline{MI(C, X)}$ como una medida de información útil de una clase y $\overline{H(X)} - \overline{MI(C, X)}$ como una medida de información no útil, la meta-característica puede ser evaluado como: $NS.ratio = \dfrac{\overline{H(X)} - \overline{MI(C, X}}{\overline{MI(C, X)}}$
 	\end{description}
 	\item \textsc{\underline{Específicos de AutoGOAL}}: \begin{description}
 		\item[Tipo semántico de la entrada y de la salida:] AutoGOAL representa diferentes tipos de datos semánticos que recogen el concepto de compatibilidad de tipos. Estos tipos se representan como una jerarquía de clases en la cual la herencia determina la relación de compatibilidad $\leq$. Los tipos de datos tienen una interpretación semántica más allá de su estructura computacional subyacente. Por ejemplo, una lista de valores puede representar un vector de valores discretos o un vector de categorías, dependiendo de la interpretación más adecuada para un problema determinado. En su implementación actual, AutoGOAL define 23 tipos semánticos de datos [quizás poner figura del paper de AutoGOAL?], incluyendo varios para datos de lenguaje natural, como \texttt{Token} o \texttt{Stem}.
@@ -96,11 +96,11 @@ Debido a la complejidad computacional requerida para el cálculo de los últimos
 
 \subsubsection{Características de las soluciones}\label{subsub:soluciones}
 
-Además de las meta-features, se extrajo información relacionada con las soluciones de las tareas, que fueron usadas como características para el meta-modelo. En la fase de adquisición de conocimiento, la solución de las tareas deben ser generadas. El enfoque de meta-learning seguido no intenta simplemente determinar un buen algoritmo con sus hiperparámetros como solución, sino un ``flujo de algoritmos'', lo que complejiza la generación de estos. Un flujo $p = <a^1, ..., a^2>$  puede ser visto como un caso especial de algoritmo que aplica cada algoritmo $a^i$ de forma secuencial a la salida del algoritmo anterior en la secuencia. Formalmente, se puede ver como la composición de los algoritmos correspondientes, es decir, $p(x) = a^n(a^{n-1}(...a^1(x)...))$.
+Además de las meta-características, se extrajo información relacionada con las soluciones de las tareas, que fueron usadas como características para el meta-modelo. En la fase de adquisición de conocimiento, la solución de las tareas deben ser generadas. El enfoque de meta-learning seguido no intenta simplemente determinar un buen algoritmo con sus hiperparámetros como solución, sino un ``flujo de algoritmos'', lo que complejiza la generación de estos. Un flujo $p = <a^1, ..., a^2>$  puede ser visto como un caso especial de algoritmo que aplica cada algoritmo $a^i$ de forma secuencial a la salida del algoritmo anterior en la secuencia. Formalmente, se puede ver como la composición de los algoritmos correspondientes, es decir, $p(x) = a^n(a^{n-1}(...a^1(x)...))$.
 
 Para la generación de los flujos de algoritmos se usó AutoGOAL. En cada uno de los datasets se ejecutó AutoGOAL y se guardaron las arquitecturas generadas junto con su rendimiento. El formato en el que se guardaron fue dependiente de la estructura en la que AutoGOAL procesa los flujos. Los algoritmos se ponen primero secuencialmente, luego existe una palabra clave \texttt{END} para representar el final de estos. Después, se ponen los hiperparámetros de los algoritmos de la forma  `\texttt{\{algoritmo\}\_\{hiperparámetro\}}' para identificarlos. Además de las estructuras de los flujos de algoritmos, se guardó el modelo probabilístico que siguió AutoGOAL para la formación de dicho flujo.
 
-En una de las estrategias seguidas, se implementa un meta-modelo que usa las meta-features de los datasets de entrenamiento y la representación de los flujos de algoritmos generados como características y el rendimiento de estos flujos como etiquetas. Esta información es usada para su entrenamiento.
+En una de las estrategias seguidas, se implementa un meta-modelo que usa las meta-características de los datasets de entrenamiento y la representación de los flujos de algoritmos generados como características y el rendimiento de estos flujos como etiquetas. Esta información es usada para su entrenamiento.
 
 Una vez adquirido el meta-conocimiento se procede a la aplicación del mismo.
 
@@ -121,7 +121,7 @@ La selección de algoritmos fue realizada mediante un enfoque de ranking, en el 
 
 La primera estrategia, de \textit{Nearest Neighbors} o Vecinos Más Cercanos, consiste en extraer los flujos candidatos para un dataset determinado en dependencia de las características de los \texttt{k} datasets más similares a él. Se extraen los \texttt{n} flujos de algoritmos que hayan tenido mejor rendimiento en cada uno de los \texttt{k} datasets, y estos flujos son combinados para formar un nuevo ranking para el nuevo dataset. Este enfoque puede ser dividido en dos pasos: la búsqueda de los vecinos cercanos y la generación de un ranking.
 
-En el primer paso, dado un dataset nuevo, se calculan sus meta-features con el objetivo de construir un vector de características. Luego, se selecciona un conjunto de \texttt{k} instancias (vecinos cercanos) en el dataset de entrenamiento que son similares al nuevo dataset. Esta similitud está basada en una medida de distancia (por ejemplo, la distancia euclidiana), que es aplicada entre los vectores de características de los datasets de entrenamiento y el nuevo dataset. La solución seguida soporta cualquier función de similitud, para comprobar el funcionamiento del sistema el siguiente conjunto de medidas fueron implementadas:
+En el primer paso, dado un dataset nuevo, se calculan sus meta-características con el objetivo de construir un vector de características. Luego, se selecciona un conjunto de \texttt{k} instancias (vecinos cercanos) en el dataset de entrenamiento que son similares al nuevo dataset. Esta similitud está basada en una medida de distancia (por ejemplo, la distancia euclidiana), que es aplicada entre los vectores de características de los datasets de entrenamiento y el nuevo dataset. La solución seguida soporta cualquier función de similitud, para comprobar el funcionamiento del sistema el siguiente conjunto de medidas fueron implementadas:
 
 \begin{itemize}
 %	\item similitud coseno: es una medida de similitud existente entre dos vectores en un espacio que posee un producto interior con el que se evalúa el valor del coseno comprendido entre ellos. $$cos(\theta) = \dfrac{A \multiply B}{||A||||B||}$$.
@@ -146,7 +146,7 @@ Este último enfoque tiene una desventaja, y es que los pares dataset-flujo guar
 
 La segunda estrategia usa un meta-modelo para predecir el rendimiento de un flujo de algoritmos en un determinado dataset sin necesidad de ejecutar dicho flujo. Al igual que en la estrategia anterior dado un nuevo dataset se extraen los flujos más similares a él, y se obtiene un conjunto de flujos candidatos. Estos flujos son presentados al meta-modelo junto con el nuevo dataset para obtener un ranking de los algoritmos candidatos. Esta estrategia también funciona en dos pasos.
 
-En el primer paso se computan las meta-features del nuevo dataset, y se sigue un método parecido a la estrategia anterior para obtener los dataset similares. La similitud se mide con una métrica de distancia entre los vectores de características de los datasets que se quieren comparar. Para la solución del sistema cualquier función de similitud puede ser usada, se implementaron y se probaron las mismas funciones que en la estrategia anterior: distancia L1 y distancia L2.
+En el primer paso se computan las meta-características del nuevo dataset, y se sigue un método parecido a la estrategia anterior para obtener los dataset similares. La similitud se mide con una métrica de distancia entre los vectores de características de los datasets que se quieren comparar. Para la solución del sistema cualquier función de similitud puede ser usada, se implementaron y se probaron las mismas funciones que en la estrategia anterior: distancia L1 y distancia L2.
 
 Los datasets similares son usados para determinar los flujos de algoritmos que son presentados al ranker. En vez de presentar todos los flujos obtenidos del conjunto de entrenamiento al meta-modelo, por cuestiones de eficiencia, se seleccionan solo los más prometedores, que son los que tienen mayor rendimiento en los datasets similares. Para determinar cuantos datasets y flujos de algoritmos extraer se usa la información referente al tamaño del ranking final que se quiere obtener. Si, por ejemplo, se quiere obtener un ranking de 15 flujos, entonces se seleccionan los 15 datasets más similares al dataset en cuestión y de estos datasets se extraen los 15 flujos de mejor rendimiento. 
 
@@ -195,7 +195,7 @@ Para comprender cómo la técnica de meta-learning propuesta fue añadida a Auto
 
 Dada un problema específico con tipos $T^*_{in}$ , $T^*_{out}$ de entrada y salida respectivamente, una solución consiste en un flujo $p =<a^1, ..., a^n >$ tal que el tipo $T^*_{in}$ sea compatible con el tipo $T^p_{in}$ y el tipo $T^p_{out}$ sea compatible con el tipo $T^*_{out}$. Considerando el grafo construido anteriormente $G_A$, se añaden dos nodos ficticios, el nodo Entrada y el nodo Salida, que representan los tipos de entrada y de salida respectivamente. Los algoritmos con tipos de entrada compatible con el primero tendrán una arista desde el mismo, mientras que los compatibles con la salida presentarán una arista hacia el segundo. En este grafo cualquier camino que comience en el nodo Entrada y termine en el nodo Salida representa un flujo que resuelve dicho problema.
 
-En AutoGOAL sobre el grafo de algoritmos $G_A$ de un problema específico se realiza un proceso de optimización para descubrir los mejores flujos válidos mediante generación aleatoria. Este proceso de optimización se basa en evolución gramatical probabilístico para gramáticas libres del contexto \cite{pge2015}, y consiste en un ciclo de generación y evaluación utilizando una gramática construida a partir de $G_A$, dirigida por un modelo probabilístico $\sigma$.
+En AutoGOAL sobre el grafo de algoritmos $G_A$ de un problema específico se realiza un proceso de optimización para descubrir los mejores flujos válidos mediante generación aleatoria. Este proceso de optimización se basa en evolución gramatical probabilística para gramáticas libres del contexto \cite{pge2015}, y consiste en un ciclo de generación y evaluación utilizando una gramática construida a partir de $G_A$, dirigida por un modelo probabilístico $\sigma$.
 
 Para generar los flujos de algoritmos, primero se debe considerar que, por construcción, cada nodo pertenece a un camino válido. Por tanto, realizando un recorrido aleatorio comenzando por el nodo Entrada, si no se repiten nodos y toda arista tiene probabilidad de cruzarse mayor que 0, entonces se garantiza que este recorrido termina en el nodo Salida. A cada algoritmo $a_i$ en $G_A$ se le asigna un peso (no normalizado) $w_i$, que se utiliza para seleccionar un vecino aleatorio durante la generación de un camino en $G_A$ siguiendo una distribución multinomial Bernoulli.
 
