--- a/Thesis.tex
+++ b/Thesis.tex
@@ -22,9 +22,10 @@
 \renewcommand{\listalgorithmcfname}{Índice de Algoritmos}%
 %\dontprintsemicolon
 \SetAlgoNoEnd
+\DeclareUnicodeCharacter{00A0}{ }
 
 
-\title{Una estrategia de meta-learning para flujos genéricos de AutoML}
+\title{Una estrategia de Meta-Learning para flujos genéricos de AutoML}
 \author{Loraine Monteagudo García}
 \advisor{\\Msc. Suilan Estéves Velarde \\
 		Lic. Daniel Alejandro Valdés Pérez}
